# AutoML-Studio

./: .dockerignore  .env.example  .gitattributes  .gitignore  AutoML_Studio.spec  Dockerfile  README.md  app.py  auth.py  dummy.csv  logging_config.py  requirements.txt  session_manager.py  test_api.py  test_e2e.py  test_loan_data.csv  test_local_llm.py  test_models.py  test_pipeline.py
ml_engine/: __init__.py  adversarial_tester.py  annotation_engine.py  anomaly_engine.py  association_engine.py  auto_eda.py  autonomous_agent.py  b2_project_storage.py  b2_storage.py  bias_amplification.py  calibration_engine.py  causal_engine.py  cleaner.py  cleaning_advisor.py  clustering_engine.py  collaborative_intelligence.py  column_fate_tracker.py  competition_engine.py  complexity_analyzer.py  compressor.py  confidence_bands.py  conformal_predictor.py  constraint_learner.py  cv_stability.py  data_prescription.py  data_quality.py  data_query_engine.py  data_sufficiency.py  data_valuation.py  dataset_fingerprint.py  decision_engine.py  deployer.py  diagnostics.py  dim_reduction.py  disagreement_analyzer.py  ensemble_builder.py  error_slicer.py  experiment_store.py  explainer.py  fairness.py  (+47 more)
sdk/: pyproject.toml
sdk/automl_studio/: __init__.py
static/: app.js  auth_helper.js  dashboard.css  dashboard.js  intelligence.js  intelligence2.js  settings_manager.js  style.css
templates/: dashboard.html  index.html  login.html  profile.html
tests/: conftest.py  test_auth.py  test_cleaner.py  test_edge_cases.py  test_feature_engineer.py  test_profiler.py  test_session_manager.py  (+2 more)
(+3 files in other folders)
