[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "automl-studio-sdk"
version = "0.1.0"
description = "Python SDK for AutoML Studio — automated machine learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "requests>=2.28",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = ["pytest", "responses"]

[tool.setuptools.packages.find]
where = ["."]
